[package]
name = "execute-command-macro-impl"
version = "0.3.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/magiclen/execute"
homepage = "https://magiclen.org/execute"
keywords = ["execute", "command"]
categories = ["parser-implementations"]
description = "Create `Command` instances using the `command!` macro."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
execute-command-tokens = { version = "0.3.0", path = "../execute-command-tokens" }

syn = "2"
quote = "1"