[package]
name = "execute-command-macro"
version = "0.1.9"
rust-version = "1.65"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/execute"
homepage = "https://magiclen.org/execute"
keywords = ["execute", "command"]
categories = ["parser-implementations"]
description = "Create `Command` instances using the `command!` macro or the `command_args!` marco."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
execute-command-macro-impl = { version = "0.1", path = "../execute-command-macro-impl" }