[package]
name = "execute-command-macro"
version = "0.3.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/magiclen/execute"
homepage = "https://magiclen.org/execute"
keywords = ["execute", "command"]
categories = ["parser-implementations"]
description = "Create `Command` instances using the `command!` macro or the `command_args!` macro."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
execute-command-macro-impl = { version = "0.3", path = "../execute-command-macro-impl" }
