[package]
name = "execute-command-tokens"
version = "0.3.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/magiclen/execute"
homepage = "https://magiclen.org/execute"
keywords = ["execute", "command"]
categories = ["parser-implementations"]
description = "Parse command strings."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
