[package]
name = "execute"
version = "0.3.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/magiclen/execute"
homepage = "https://magiclen.org/execute"
keywords = ["execute", "redirect", "process", "command", "pipe"]
categories = ["parser-implementations"]
description = "A library for extending `Command` in order to execute programs more easily."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
execute-command-tokens = { version = "0.3.0", path = "../execute-command-tokens" }
execute-command-macro = { version = "0.3.0", path = "../execute-command-macro" }